atualizações na landing page

--- a/index.html
+++ b/index.html
@@ -5,23 +5,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <title>Avatar Boost</title>
 </head>
 
 <body>
-    <section class="home">
+    <section id="home" class="home">
         <div class="background-home"></div>
+        <div class="info-home">
+            <h1 class="title-home">Avatar Boost</h1>
+            <p class="txt-home">The Last Airbender</p>
+        </div>
         <nav>
-            <span class="home-button">...</span>
+            <a href="#home" class="home-button"></a>
             <a href="#history" class="history-button">História</a>
-            <a href="" class="fire-button">Fogo</a>
-            <a href="" class="air-button">Ar</a>
-            <a href="" class="water-button">Água</a>
-            <a href="" class="earth-button">Terra</a>
+            <a href="#fire" class="fire-button"></a>
+            <a href="#air" class="air-button"></a>
+            <a href="#water" class="water-button"></a>
+            <a href="#earth" class="earth-button"></a>
             <a href="" class="aboutMe-button">Sobre Mim</a>
         </nav>
     </section>
     <main>
+        <div class="lax"></div>
         <section id="history" class="historia">
             <div class="txt-historia">
                 <p>Avatar: A Lenda de Aang é ambientada em um mundo que abriga humanos e animais híbridos, adjacente a
@@ -45,12 +53,50 @@
                     Estado de Avatar, o ciclo de reencarnação será terminado caso o Avatar seja morto nessa condição, de
                     modo que o Avatar não renasça.</p>
             </div>
-
+            <div class="trailer-history">
+                <iframe class="trailer" src=" https://www.youtube.com/embed/ooVvH2IYz0w?si=wQKaG_XDRIV2RWNU"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </section>
-        <section class="fogo"></section>
-        <section class="ar"></section>
-        <section class="agua"></section>
-        <section class="terra"></section>
+        <div class="lax"></div>
+        <section id="fire" class="fire">
+            <div class="txt-fire">
+                <h1>Agni Kai</h1>
+                <p>Agni Kai é o nome para duelos entre dobradores de fogo. Alguns, mas não todos, são até a morte.
+                    Os
+                    duelos são geralmente usados para resolver conflitos e também um tipo de entretenimento. O Palácio
+                    Real da Nação do Fogo ainda abriga uma câmara especial para o Agni Kai.
+
+                    O objetivo desses duelos é fazer com que o oponente fique sem equilíbrio, e incapacitar ele com o
+                    último ataque. O melhor movimento para acabar com o duelo é gerar uma explosão de fogo na cara do
+                    adversário (como evidência, a cicatriz de Zuko).
+                    Qualquer Dobrador de Fogo pode participar, homens ou mulheres podem ser desafiados. Senhores do Fogo
+                    também podem ser desafiados, mas isso acontece raramente, porque os Senhores do Fogo são geralmente
+                    os melhores Dobradores de Fogo do mundo.
+                </p>
+                <p>Participe de um Agni Kai Agora</p>
+                <p class="button-entrar">Entrar</p>
+            </div>
+            <div class="zuko-fire"></div>
+        </section>
+        <div class="lax"></div>
+        <section class="air" id="air">
+            <div class="txt-air">
+                <h1>Agni Kai</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
+                    sunt, provident cupiditate illum aliquid aut minima aspernatur consequatur nisi incidunt, commodi
+                    quis delectus totam magni? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
+                    impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
+                    Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
+                </p>
+            </div>
+        </section>
+        <div class="lax"></div>
+        <section class="water" id="water"></section>
+        <div class="lax"></div>
+        <section class="earth" id="earth"></section>
     </main>
 </body>
 
