alterações em backgrounds do site + funcionalidade de troca de cor de navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 class="title-home">Avatar Boost</h1>
             <p class="txt-home">The Last Airbender</p>
         </div>
-        <nav>
+        <nav id="nav">
             <a href="#home" class="home-button"></a>
             <a href="#history" class="history-button">História</a>
             <a href="#fire" class="fire-button"></a>
@@ -29,7 +29,7 @@
         </nav>
     </section>
     <main>
-        <div class="lax"></div>
+        <div class="lax um"></div>
         <section id="history" class="historia">
             <div class="txt-historia">
                 <p>Avatar: A Lenda de Aang é ambientada em um mundo que abriga humanos e animais híbridos, adjacente a
@@ -60,7 +60,7 @@
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
-        <div class="lax"></div>
+        <div class="lax dois"></div>
         <section id="fire" class="fire">
             <div class="txt-fire">
                 <h1>Agni Kai</h1>
@@ -101,4 +101,4 @@
 </body>
 
 </html>
-<script></script>
+<script src="home.js"></script>
