alterações na navbar + seção de historia

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
             <p class="txt-home">The Last Airbender</p>
         </div>
         <nav id="nav">
-            <a href="#home" class="home-button"></a>
-            <a href="#history" class="history-button">História</a>
-            <a href="#fire" class="fire-button"></a>
-            <a href="#air" class="air-button"></a>
-            <a href="#water" class="water-button"></a>
-            <a href="#earth" class="earth-button"></a>
-            <a href="" class="aboutMe-button">Sobre Mim</a>
+            <a href="#home" class="home-button standard"></a>
+            <a href="#history" class="history-button standard">História</a>
+            <a href="#fire" class="fire-button standard"></a>
+            <a href="#air" class="air-button standard"></a>
+            <a href="#water" class="water-button standard"></a>
+            <a href="#earth" class="earth-button standard"></a>
+            <a href="" class="aboutMe-button standard">Sobre Mim</a>
+            <a href="" class="register-button "><span class="button-content">Login</span></a>
         </nav>
     </section>
     <main>
@@ -64,7 +65,9 @@
         <section id="fire" class="fire">
             <div class="txt-fire">
                 <h1>Agni Kai</h1>
-                <p>Agni Kai é o nome para duelos entre dobradores de fogo. Alguns, mas não todos, são até a morte.
+                <p>Agni Kai é o nome para duelos entre dobradores de fogo. Alguns, mas não todos,
+                    são até a
+                    morte.
                     Os
                     duelos são geralmente usados para resolver conflitos e também um tipo de entretenimento. O Palácio
                     Real da Nação do Fogo ainda abriga uma câmara especial para o Agni Kai.
@@ -81,7 +84,7 @@
             </div>
             <div class="zuko-fire"></div>
         </section>
-        <div class="lax"></div>
+        <div class="lax tres"></div>
         <section class="air" id="air">
             <div class="txt-air">
                 <h1>Agni Kai</h1>
@@ -93,8 +96,13 @@
                 </p>
             </div>
         </section>
-        <div class="lax"></div>
-        <section class="water" id="water"></section>
+        <div class="lax quatro"></div>
+        <section class="water" id="water">
+            <button class="button">
+                <span class="liquid"></span>
+                <span class="btn-txt">Click Me</span>
+            </button>
+        </section>
         <div class="lax"></div>
         <section class="earth" id="earth"></section>
     </main>
