Agni Kai implementado

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     os melhores Dobradores de Fogo do mundo.
                 </p>
                 <p>Participe de um Agni Kai Agora</p>
-                <p class="button-entrar">Entrar</p>
+                <a class="button-entrar" href="AgniKai.html">Entrar</a>
             </div>
             <div class="zuko-fire"></div>
         </section>
