Agni Kai Cont feito em aula

--- a/AgniKai.html
+++ b/AgniKai.html
@@ -47,8 +47,18 @@
 
     <!--  Background 03 - character -->
     <div class="character01" id="character01" style="display: none">
+        <div class="player">
+        <p class="player-click" id="button_player"></p>
+        <p class="atack" id="atack_player">Ataques de Fogo: 0</p>
     </div>
-    <div class="character02" id="character02" style="display: none"></div>
+    </div>
+    <div class="character02" id="character02" style="display: none">
+        <div class="cpu">
+        <p class="cpu-click"></p>
+        <p class="atack">Ataques de Fogo: 0</p>
+        </div>
+    </div>
+    </div>
 </body>
 
 </html>
