--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                     também podem ser desafiados, mas isso acontece raramente, porque os Senhores do Fogo são geralmente
                     os melhores Dobradores de Fogo do mundo.
                 </p>
-                <p>Participe de um Agni Kai Agora</p>
-                <a class="button-entrar" href="AgniKai.html">Entrar</a>
+                <p class="txt-scd">Participe de um Agni Kai Agora</p>
+                <a class="button-agnikai" href="AgniKai.html">Entrar</a>
             </div>
             <div class="zuko-fire"></div>
         </section>
