criação da tela de cadastro e login

--- a/index.html
+++ b/index.html
@@ -80,20 +80,21 @@
                     os melhores Dobradores de Fogo do mundo.
                 </p>
                 <p class="txt-scd">Participe de um Agni Kai Agora</p>
-                <a class="button-agnikai" href="AgniKai.html">Entrar</a>
+                <a class="button-agnikai" href="fire-AgniKai.html">Entrar</a>
             </div>
             <div class="zuko-fire"></div>
         </section>
         <div class="lax tres"></div>
         <section class="air" id="air">
             <div class="txt-air">
-                <h1>Agni Kai</h1>
+                <h1>Avatares</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
                     sunt, provident cupiditate illum aliquid aut minima aspernatur consequatur nisi incidunt, commodi
                     quis delectus totam magni? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
                     impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
                     Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
                 </p>
+                <a class="button-dobra" href="">Entrar</a>
             </div>
         </section>
         <div class="lax quatro"></div>
