--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#air" class="air-button standard"></a>
             <a href="#water" class="water-button standard"></a>
             <a href="#earth" class="earth-button standard"></a>
-            <a href="" class="aboutMe-button standard">Sobre Mim</a>
+            <a href="#aboutMe" class="aboutMe-button standard">Sobre Mim</a>
             <a href="" class="register-button "><span class="button-content">Login</span></a>
         </nav>
     </section>
@@ -104,8 +104,10 @@
                 <span class="btn-txt">Click Me</span>
             </button>
         </section>
-        <div class="lax"></div>
+        <div class="lax cinco"></div>
         <section class="earth" id="earth"></section>
+        <div class="lax seis"></div>
+        <section id="aboutMe" class="aboutMe"></section>
     </main>
 </body>
 
