--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#water" class="water-button standard"></a>
             <a href="#earth" class="earth-button standard"></a>
             <a href="#aboutMe" class="aboutMe-button standard">Sobre Mim</a>
-            <a href="" class="register-button "><span class="button-content">Login</span></a>
+            <a href="cadastrologin.html" class="register-button "><span class="button-content">Login</span></a>
         </nav>
     </section>
     <main>
