--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Avatar Boost</title>
 </head>
@@ -61,11 +62,12 @@
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
-    
+
         <section id="fire" class="fire">
             <div class="txt-fire">
                 <h1>Agni Kai</h1>
-                <p>Agni Kai é o nome para duelos entre dobradores de fogo. Alguns, mas não todos,
+                <p class="font-effect-fire">Agni Kai é o nome para duelos entre dobradores de fogo. Alguns, mas não
+                    todos,
                     são até a
                     morte.
                     Os
@@ -75,9 +77,6 @@
                     O objetivo desses duelos é fazer com que o oponente fique sem equilíbrio, e incapacitar ele com o
                     último ataque. O melhor movimento para acabar com o duelo é gerar uma explosão de fogo na cara do
                     adversário (como evidência, a cicatriz de Zuko).
-                    Qualquer Dobrador de Fogo pode participar, homens ou mulheres podem ser desafiados. Senhores do Fogo
-                    também podem ser desafiados, mas isso acontece raramente, porque os Senhores do Fogo são geralmente
-                    os melhores Dobradores de Fogo do mundo.
                 </p>
                 <p class="txt-scd">Participe de um Agni Kai Agora</p>
                 <a class="button-agnikai" href="fire-AgniKai.html">Entrar</a>
