home textos e imagens laterais

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
         <section id="fire" class="fire">
             <div class="txt-fire">
-                <h1>Agni Kai</h1>
-                <p class="font-effect-fire">Agni Kai é o nome para duelos entre dobradores de fogo. Alguns, mas não
+                <h1 class="font-effect-fire">Agni Kai</h1>
+                <p>Agni Kai é o nome para duelos entre dobradores de fogo. Alguns, mas não
                     todos,
                     são até a
                     morte.
@@ -85,9 +85,10 @@
         </section>
 
         <section class="air" id="air">
+            <div class="aang-air"></div>
             <div class="txt-air">
                 <h1>Avatares</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae pariatur accusamus deleniti adipisci?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
                     sunt, provident cupiditate illum aliquid aut minima aspernatur consequatur nisi incidunt, commodi
                     quis delectus totam magni? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
                     impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
@@ -96,14 +97,37 @@
                 <a class="button-dobra" href="">Entrar</a>
             </div>
         </section>
+
         <section class="water" id="water">
+            <div class="txt-water">
+                <h1>Avatares</h1>
+                <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae pariatur accusamus deleniti adipisci?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
+                    sunt, provident cupiditate illum aliquid aut minima aspernatur consequatur nisi incidunt, commodi
+                    quis delectus totam magni? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
+                    impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
+                    Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
+                </p>
             <button class="button">
                 <span class="liquid"></span>
                 <span class="btn-txt">Click Me</span>
             </button>
+            </div>
+            <div class="katara-water"></div>
         </section>
 
-        <section class="earth" id="earth"></section>
+        <section class="earth" id="earth">
+            <div class="toph-earth"></div>
+            <div class="txt-earth">
+                <h1>Avatares</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae pariatur accusamus deleniti adipisci?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
+                    sunt, provident cupiditate illum aliquid aut minima aspernatur consequatur nisi incidunt, commodi
+                    quis delectus totam magni? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
+                    impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
+                    Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
+                </p>
+                <a class="button-dobra" href="">Entrar</a>
+            </div>
+        </section>
         <section id="aboutMe" class="aboutMe"></section>
     </main>
 </body>
