criação da logica do toph game

--- a/index.html
+++ b/index.html
@@ -88,7 +88,12 @@
             <div class="aang-air"></div>
             <div class="txt-air">
                 <h1>Avatares</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae pariatur accusamus deleniti adipisci?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa
+                    aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae
+                    pariatur accusamus deleniti adipisci?Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit
+                    distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet
+                    consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
                     sunt, provident cupiditate illum aliquid aut minima aspernatur consequatur nisi incidunt, commodi
                     quis delectus totam magni? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
                     impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
@@ -101,16 +106,21 @@
         <section class="water" id="water">
             <div class="txt-water">
                 <h1>Avatares</h1>
-                <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae pariatur accusamus deleniti adipisci?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa
+                    aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae
+                    pariatur accusamus deleniti adipisci?Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit
+                    distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet
+                    consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
                     sunt, provident cupiditate illum aliquid aut minima aspernatur consequatur nisi incidunt, commodi
                     quis delectus totam magni? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
                     impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
                     Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
                 </p>
-            <button class="button">
-                <span class="liquid"></span>
-                <span class="btn-txt">Click Me</span>
-            </button>
+                <button class="button">
+                    <span class="liquid"></span>
+                    <span class="btn-txt">Entrar</span>
+                </button>
             </div>
             <div class="katara-water"></div>
         </section>
@@ -119,7 +129,12 @@
             <div class="toph-earth"></div>
             <div class="txt-earth">
                 <h1>Avatares</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae pariatur accusamus deleniti adipisci?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa
+                    aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae
+                    pariatur accusamus deleniti adipisci?Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit
+                    distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet
+                    consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
                     sunt, provident cupiditate illum aliquid aut minima aspernatur consequatur nisi incidunt, commodi
                     quis delectus totam magni? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
                     impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
