--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
                     Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
                 </p>
-                <a class="button-dobra" href="">Entrar</a>
+                <a class="button-dobra" href="earth-toph.html">Entrar</a>
             </div>
         </section>
         <section id="aboutMe" class="aboutMe"></section>
