--- a/air-aang.html
+++ b/air-aang.html
@@ -4,11 +4,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="air-aang.css">
     <title>Dobras</title>
 </head>
 
 <body>
-    <section class="high"></section>
+    <section class="High">
+
+    </section>
+    <section class="cycle-avatar">
+        <div class="txt-cycle"></div>
+        <div class="cycle-img"></div>
+    </section>
+    <section class="latest-avatars">
+        <div class="box-card">
+            <div class="kyoshi-card card"></div>
+            <div class="roku-card card"></div>
+            <div class="aang-card card"></div>
+            <div class="korra-card card"></div>
+        </div>
+    </section>
+    <section class="origin">
+        <div class="earth-card flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img src="assets/cardToupeira.jpg" alt="" class="flip-card-image">
+                </div>
+                <div class="flip-card-back">
+                    <img src="assets/AangCard .jpg" alt="" class="flip-card-image">
+                </div>
+            </div>
+
+        </div>
+        <div class="fire-card container">
+            <div></div>
+            <div></div>
+        </div>
+        <div class="air-card container">
+            <div></div>
+            <div></div>
+        </div>
+        <div class="water-card container">
+            <div></div>
+            <div></div>
+        </div>
+
+    </section>
+    <section class="animals">
+        <h1>Animais do Mundo Avatar</h1>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </section>
 </body>
 
 </html>
