Cards Dobradores Originais Air-aang

--- a/earth-toph.html
+++ b/earth-toph.html
@@ -29,7 +29,7 @@
         <span id="msg">Escute o Som 🔊 </span>
         <div id="choice2">
             <div id="btnRight" class="btn" style="display: none;"><span>Right</span></div>
-        </div>-
+        </div>
     </section>
     <script src="toph.js"></script>
 </body>
